Upserting Vectors code updated to be picking up IDs from the local storage and initilizing frontend

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,6 @@ PineConeLocal/pyvenv.cfg
 __pycache__
 .~lock.main_dataset.csv#
 .~lock.top_100.csv#
+frontend/neytiri-frontend/node_modules/
+PineConeLocal/downloaded_images/
+frontend/neytiri-frontend/downloaded_images/
