Jhumka vector embedding preperared, Loading state spinner added

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ PineconeLocal/utils/credentials.py
 frontend/neytiri-frontend/node_modules/
 PineConeLocal/downloaded_images/
 frontend/neytiri-frontend/downloaded_images/
+PineConeLocal/downloaded_images2/
