--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ frontend/neytiri-frontend/node_modules/
 PineConeLocal/downloaded_images/
 frontend/neytiri-frontend/downloaded_images/
 PineConeLocal/downloaded_images2/
+scrapped_images
