--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,10 @@ python-dotenv
 fastapi-cors
 chardet
 pytrends
+Pillow
+datasets
+transformers
+sentence-transformers
+pinecone-client
+pinecone-text
+protobuf==3.20.3
